[package]
name = "crds_node"
version = "0.1.0"
edition = "2021"
description = "A standalone CRDS node for simulations and tests"

[dependencies]
anyhow.workspace = true
borsh.workspace = true
clap = {version="4.5.32", features=["derive", "cargo"]}
log.workspace = true
rand.workspace = true
rustyline = "15.0.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
signal-hook.workspace = true
solana-gossip = { workspace = true, features = ["dev-context-only-utils"] }
solana-hash = { workspace = true, features = ["borsh"] }
solana-instruction = { workspace = true, features = ["bincode", "borsh"] }
solana-keypair.workspace = true
agave-logger.workspace = true
solana-packet = { workspace = true, features = ["dev-context-only-utils"] }
solana-pubkey.workspace = true
solana-signer.workspace = true
solana-streamer.workspace = true
solana-time-utils.workspace = true
solana-transaction = { workspace = true, features = ["bincode", "dev-context-only-utils"] }
solana-net-utils = { workspace = true }